# lyrical-miracle-dashboard

./: .dockerignore  .gitignore  Dockerfile  Home.py  README.md  dlt_embed_lyrics.py  dlt_filter_genius_searches.py  dlt_get_genius_lyrics.py  dlt_get_genius_meta.py  dlt_parse_spotify_dump.py  dlt_search_genius.py  dlt_spotify_get_tracks.py  precompute.py  pyproject.toml
.dlt/: config.toml
apps/airflow/: embeddings.py  genius.py  get_scrobbles.py  pipeline.py  pyproject.toml
apps/dashboard/: clustering.py  common.py  graphs.py  main.py  precompute.py  pyproject.toml
apps/dashboard/pages/: 1_Monthlies.py  2_Timelines.py
dashboard/: albumart.py  clustering.py  common.py  database.py  graphs.py  lastfm.py  precompute.py  vector_search.py
lyrical-miracle-dashboard/: Home.py  albumart.py  common.py  connection.py  database.py  lastfm.py  precompute.py  vector_search.py
lyrical-miracle-dashboard/pages/: 1_Monthlies.py  2_Timelines.py  3_Search.py
pages/: 1_Monthlies.py  2_Timelines.py  3_Search.py
