[project]
name = "dashboard"
version = "0.3.0"
requires-python = ">=3.14"
dependencies = [
    "adbc-driver-postgresql>=1.11.0",
    "connectorx>=0.4.5",
    "duckdb>=1.5.3",
    "faiss-cpu>=1.13.2",
    "google-genai>=2.6.0",
    "networkx>=3.6.1",
    "numpy>=2.4.6",
    "pendulum>=3.2.0",
    "plotly>=6.7.0",
    "polars>=1.40.1",
    "psycopg-binary>=3.3.4",
    "requests>=2.34.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "sqlalchemy>=2.0.49",
    "streamlit-agraph>=0.0.45",
    "streamlit[charts]>=1.57.0",
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "dashboard"
module-root = ""

[tool.ruff.format]
quote-style = "single"

[dependency-groups]
precompute = [
    "marimo>=0.23.11",
]
