[project]
name = "lyric-analyzer-streamlit"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "lyric-analyzer-base",
    "plotly>=6.5.0",
    "streamlit-agraph>=0.0.45",
    "streamlit[charts]>=1.52.2",
]

# [tool.uv.sources]
# lyric-analyzer-base = { workspace = true, editable = true }
